--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <!-- Kolom Foto (Tengah) -->
                             <div class="col-lg-4 image-section">
                                 <div class="hero-image-container">
-                                    <img src="/assets/Mask group.png" alt="Zaky Zahran Pramadita" class="hero-image">
+                                    <img src="assets/Mask group.png" alt="Zaky Zahran Pramadita" class="hero-image">
                                 </div>
                             </div>
                 
@@ -156,7 +156,7 @@
                     <div class="stats-grid">
                         <div class="stats-item">
                             <div class="project-card">
-                                <img src="/assets/web.png" alt="Web Programming" class="project-image">
+                                <img src="assets/web.png" alt="Web Programming" class="project-image">
                                 <div class="project-overlay">
                                     <h3>Web Programming</h3>
                                     <p>25 Project</p>
@@ -166,7 +166,7 @@
                         </div>
                         <div class="stats-item">
                             <div class="project-card">
-                                <img src="/assets/iot.png" alt="IoT" class="project-image">
+                                <img src="assets/iot.png" alt="IoT" class="project-image">
                                 <div class="project-overlay">
                                     <h3>IoT</h3>
                                     <p>17 Project</p>
